...
        "address": "7141 Sherbrooke St W, Montreal, QC",
        "contact": "Phone: +1 514-848-2424 ext. 7700",
        "description": "Vanier Library serves students and faculty with extensive study areas, research materials, and digital resources at the Loyola Campus."
    },
    {
        "id": "PY",
        "name": "Psychology Building",
        "latitude": 45.4588614,
        "longitude": -73.6405979,
        "boundary": {
            "outer": [
                { "latitude": 45.4587698, "longitude": -73.6407406 },
                { "latitude": 45.4587966, "longitude": -73.6408103 },
...
        "address": "7141 Sherbrooke St W, Montreal, QC",
        "contact": "Phone: +1 514-848-2424 ext. 3400",
        "description": "The Loyola Jesuit Hall and Conference Center is a key venue at Loyola Campus for academic and professional events, providing modern facilities for conferences, meetings, and social gatherings."
    },    
    {
        "id": "SP",
        "name": "Richard J Renaud Science Complex",
        "latitude": 45.4572512,
        "longitude": -73.6407593,
        "boundary": [
            { "latitude": 45.4569746, "longitude": -73.6408295 },
            { "latitude": 45.4570166, "longitude": -73.6409402 },
            { "latitude": 45.4569934, "longitude": -73.6409581 },
...
        "address": "7141 Sherbrooke St W, Montreal, QC",
        "contact": "Phone: +1 514-848-2424 ext. 2500",
        "description": "The Communication Studies and Journalism Building is dedicated to media, journalism, and communication students, providing cutting-edge resources for media production and research."
    },    
    {
        id: 'GE',
        name: 'Centre for Structural and Functional Genomics',
        latitude: 45.4571108,
        longitude: -73.6406112,
        boundary: [
            { latitude: 45.4571701, longitude: -73.6405654 },
            { latitude: 45.4571108, longitude: -73.6406112 },
            { latitude: 45.4569490, longitude: -73.6407411 },
...
    "address": "7141 Sherbrooke St W, Montreal, QC",
    "contact": "Phone: +1 514-848-2424 ext. 3100",
    "description": "The Administration Building at Loyola Campus houses faculty offices, administrative departments, and student support services."
    },    
    {
        id: 'FC',
        name: 'F.C. Smith Building',
        latitude: 45.4585037,
        longitude: -73.6395912,
        boundary: [
            { latitude: 45.4583380, longitude: -73.6391598 },
            { latitude: 45.4584294, longitude: -73.6394033 },
            { latitude: 45.4584223, longitude: -73.6394083 },
...
