const SGWBuildings = [
    {
        id: 'H',
        name: 'Hall Building',
        latitude: 45.4971807962744,
        longitude: -73.57881293261063,
        boundary: [
            { latitude: 45.4968261, longitude: -73.5788241 },
            { latitude: 45.4970373, longitude: -73.5786245 },
            { latitude: 45.4972544, longitude: -73.5784089 },
...
        address: '1500 Rue de la Montagne, Montreal, QC',
        contact: 'Phone: +1 514-848-2424',
        description: 'Faubourg Tower is a prominent building at Concordia University, housing academic departments, faculty offices, classrooms, and various administrative offices. It is a key hub for both students and faculty, with modern facilities and ample space for collaboration.',
    },
    {
        id: 'WL',
        name: 'Webster Library, Concordia University',
        latitude: 45.49700208175132,
        longitude: -73.57808391911882,
        boundary: [
            { latitude: 45.4966595, longitude: -73.5785573 }, // Node 237615545
            { latitude: 45.4966932, longitude: -73.5785250 }, // Node 1192154287
            { latitude: 45.4967160, longitude: -73.5785731 }, // Node 1192154222
...
        address: '1500 De Maisonneuve Blvd W, Montreal, QC',
        contact: 'Phone: +1 514-848-2424 ext. 5000',
        description: 'FG - Le Faubourg is a multi-purpose building that houses residential units, retail spaces, and office areas. It serves as a hub for both living and business, with a fitness center and conference facilities available for residents and tenants.',
    },
    {
        id: 'EV',
        name: 'EV - Engineering, Computer Science and Visual Arts Integrated Complex',
        latitude: 45.49560850511448, // Approximate central point
        longitude: -73.57769300377467,
        boundary: [
            { latitude: 45.4959332, longitude: -73.5784410 }, // Node 1192154258
            { latitude: 45.4958841, longitude: -73.5783336 }, // Node 1192154367
            { latitude: 45.4959029, longitude: -73.5783135 }, // Node 1192154356
...
