...
                    <Text
                        style={[
                            styles.toggleText,
                            selectedCampus === 'Loyola' && styles.activeText,
                        ]}
                    >
                        Loyola Campus
                    </Text>
                </TouchableOpacity>
                <TouchableOpacity
                    style={[
                        styles.toggleButton,
                        selectedCampus === 'SGW' && styles.activeButton,
...
                    <Text
                        style={[
                            styles.toggleText,
                            selectedCampus === 'SGW' && styles.activeText,
                        ]}
                    >
                        SGW Campus
                    </Text>
                </TouchableOpacity>
            </View>
        </View>
    );
};
...
