...
              },
            });
          }}
          style={styles.buttonContainer}
        >
          <View style={styles.button}>
            <Text style={styles.buttonText}>Directions</Text>
          </View>
        </CalloutSubview>

      </View>
    </View>
  ),
...
