...
      }
    }
  };

  return (
    <>
      <TouchableOpacity testID="profile-button" onPress={() => setModalVisible(true)} style={{ marginLeft: 10 }}>
        <Ionicons name="person" size={30} color="#912338" />
      </TouchableOpacity>
      <Modal
        transparent
        animationType="fade"
        visible={modalVisible}
...
